typeway/tests/compile_fail/wrong_return_type.stderr
error[E0277]: `NotAResponse` cannot be used as an HTTP response
 --> tests/compile_fail/wrong_return_type.rs:9:27
  |
9 | async fn bad_handler() -> NotAResponse {
  |                           ^^^^^^^^^^^^ does not implement `IntoResponse`
  |
help: the trait `IntoResponse` is not implemented for `NotAResponse`
 --> tests/compile_fail/wrong_return_type.rs:6:1
  |
6 | struct NotAResponse;
  | ^^^^^^^^^^^^^^^^^^^
  = note: valid response types include: `&'static str`, `String`, `Json<T>`, `StatusCode`, `(StatusCode, T)`, `Result<T, E>`
  = help: the following other types implement trait `IntoResponse`:
            &'static str
            (typeway::http::StatusCode, T)
            Json<T>
            JsonError
            Response<http_body_util::combinators::box_body::UnsyncBoxBody<bytes::bytes::Bytes, Box<(dyn StdError + Send + Sync + 'static)>>>
            Result<T, E>
            bytes::bytes::Bytes
            std::string::String
            typeway::http::StatusCode
note: required by a bound in `__check_response`
 --> tests/compile_fail/wrong_return_type.rs:8:1
  |
8 | #[handler]
  | ^^^^^^^^^^ required by this bound in `__check_response`
  = note: this error originates in the attribute macro `handler` (in Nightly builds, run with -Z macro-backtrace for more info)
